provarAnt/00D1b0000000d5bEAA/objects/ATDSA_FOUR__Playlist_Content_Junction__c.object
<CustomObject>
    <description>Acts as &quot;junction&quot; object, linking a Content Document to a parent Playlist</description>
    <fields>
        <fullName>ATDSA_FOUR__ContentId__c</fullName>
        <label>ContentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ExternalId__c</fullName>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Playlist__c</fullName>
        <label>Playlist</label>
        <referenceTo>ATDSA_FOUR__DSA_Playlist__c</referenceTo>
        <relationshipLabel>Playlist Content Junctions</relationshipLabel>
        <relationshipName>Playlist_Content_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Playlist Content Junction</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playlist Content Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>